Changes to be committed: 	modified:   app.html 	modified:   landing.html 	modified:   login.html 	modified:   reports.html 	modified:   settings.html 	new file:   test.html

--- a/landing.html
+++ b/landing.html
@@ -35,11 +35,11 @@
           </div>
           <div class="flex flex-1 justify-end gap-8">
             <div class="flex items-center gap-9">
-              <a class="text-[#111418] text-sm font-medium leading-normal" href="#">Features</a>
-              <a class="text-[#111418] text-sm font-medium leading-normal" href="#">Pricing</a>
-              <a class="text-[#111418] text-sm font-medium leading-normal" href="#">Documentation</a>
+              <a class="text-[#111418] text-sm font-medium leading-normal" href="#features">Features</a>
+              <a class="text-[#111418] text-sm font-medium leading-normal" href="#pricing">Pricing</a>
+              <a class="text-[#111418] text-sm font-medium leading-normal" href="#docs">Documentation</a>
             </div>
-            <button
+            <button onclick="window.location.href='login.html'"
               class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-[#2086f3] text-white text-sm font-bold leading-normal tracking-[0.015em]"
             >
               <span class="truncate">Login</span>
@@ -65,7 +65,7 @@
                 <h2 class="text-[#2d3a4a] text-base font-normal leading-normal @[480px]:text-lg @[480px]:font-normal @[480px]:leading-normal"></h2>
                     Empowering non-performance engineers to conduct effective performance tests with ease.
                 </h2>
-                <button
+                <button onclick="window.location.href='login.html'"
                     class="flex min-w-[120px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-6 bg-[#2086f3] hover:bg-[#1869c7] transition-colors text-white text-base font-bold leading-normal tracking-[0.015em] mt-4 shadow-lg"
                 >
                     <span class="truncate">Get Started</span>
