--- a/login.html
+++ b/login.html
@@ -158,11 +158,11 @@
                   </label>
                 </div>
                 <div class="flex flex-col gap-3">
-                  <button class="flex min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 bg-[#2086f3] text-white text-base font-bold leading-normal tracking-[0.015em] w-full">
+                  <button onclick="window.location.href='app.html'" class="flex min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 bg-[#2086f3] text-white text-base font-bold leading-normal tracking-[0.015em] w-full">
                     <i class="fas fa-key mr-2"></i>
                     <span class="truncate">Login with OAuth2</span>
                   </button>
-                  <button class="flex min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 bg-[#f0f2f5] text-[#111418] text-base font-bold leading-normal tracking-[0.015em] w-full">
+                  <button onclick="window.location.href='app.html'" class="flex min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 bg-[#f0f2f5] text-[#111418] text-base font-bold leading-normal tracking-[0.015em] w-full">
                     <i class="fas fa-shield-alt mr-2"></i>
                     <span class="truncate">Login with SAML</span>
                   </button>
