--- a/reports.html
+++ b/reports.html
@@ -35,7 +35,7 @@
               <a class="text-[#131118] text-sm font-medium leading-normal hover:text-[#1976d2] transition-colors" href="app.html">Dashboard</a>
               <a class="text-[#131118] text-sm font-medium leading-normal hover:text-[#1976d2] transition-colors" href="#">Tests</a>
               <a class="text-[#131118] text-sm font-medium leading-normal hover:text-[#1976d2] border-b-2 border-[#1976d2]" href="reports.html">Reports</a>
-              <a class="text-[#131118] text-sm font-medium leading-normal hover:text-[#1976d2] transition-colors" href="config.html">Configurations</a>
+              <a class="text-[#131118] text-sm font-medium leading-normal hover:text-[#1976d2] transition-colors" href="settings.html">Settings</a>
             </div>
             <button
               class="flex max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 bg-[#f1f0f4] text-[#131118] gap-2 text-sm font-bold leading-normal tracking-[0.015em] min-w-0 px-2.5"
