--- a/settings.html
+++ b/settings.html
@@ -36,10 +36,10 @@
           </div>
           <div class="flex flex-1 justify-end gap-8">
             <div class="flex items-center gap-9">
-              <a class="text-[#111418] text-sm font-medium leading-normal" href="#">Dashboard</a>
+              <a class="text-[#111418] text-sm font-medium leading-normal" href="app.html">Dashboard</a>
               <a class="text-[#111418] text-sm font-medium leading-normal" href="#">Tests</a>
-              <a class="text-[#111418] text-sm font-medium leading-normal" href="#">Reports</a>
-              <a class="text-[#111418] text-sm font-medium leading-normal" href="#">Resources</a>
+              <a class="text-[#111418] text-sm font-medium leading-normal" href="reports.html">Reports</a>
+              <a class="text-[#111418] text-sm font-medium leading-normal" href="settings.html">Settings</a>
             </div>
             <button
               class="flex max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 bg-[#f0f2f5] text-[#111418] gap-2 text-sm font-bold leading-normal tracking-[0.015em] min-w-0 px-2.5"
